fix spacing and remove unnecessary wrapper span in patternlab and react

--- a/packages/assets/scss/02-molecules/_general-teaser.scss
+++ b/packages/assets/scss/02-molecules/_general-teaser.scss
@@ -62,22 +62,20 @@
   &__eyebrow {
     margin-bottom: 5px;
 
-    span {
-      display: inline-flex;
-      align-items: center;
-      font-size: $fonts-3xsmall;
-      line-height: 12px;
-      letter-spacing: $letter-spacing-large;
-      padding: 5px 7px;
-      text-transform: uppercase;
-      background-color: $c-bg-section;
-      font-weight: $fonts-bold;
+    display: inline-flex;
+    align-items: center;
+    font-size: $fonts-3xsmall;
+    line-height: 12px;
+    letter-spacing: $letter-spacing-large;
+    padding: 5px 7px;
+    text-transform: uppercase;
+    background-color: $c-bg-section;
+    font-weight: $fonts-bold;
 
-      svg {
-        max-height: 18px;
-        max-width: 18px;
-        margin-right: 5px;
-      }
+    svg {
+      max-height: 18px;
+      max-width: 18px;
+      margin-right: 5px;
     }
   }
 
